--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-
-≈<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>hello</head>
 	<body>
 	<header>
-      <h3>D3 program</h3>
+      <h3>too much home work</h3>
     </header>
     <nav>
       <ul>
-        <li><a href="#">User Login Information</a></li>
-        <li><a href="#">Course Information</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">photoshop</a></li>
+        <li><a href="#">marketing</a></li>
+        <li><a href="#">web development</a></li>
       </ul>
       </nav>
 	</body>
