--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>hello</head>
 	<body>
 	<header>
-      <h3>too much home work</h3>
+      <h3>too much homework,</h3>
     </header>
     <nav>
       <ul>
